@@ -1,5 +1,6 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2809753 by drunken monkey: Fixed issues with multiple OR facets.
 - #2821955 by mkalkbrenner: Adapted processor test base for use with other
   backends.
 - #2819637 by alan-ps: Renamed use of the DB layer rollback() method to
